--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="en" lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1,
+        maximum-scale=1, user-scalable=0" />
         <meta http-equiv="content-language" content="en" />
         <title>
             {% if page.title %}
@@ -42,6 +44,9 @@
           })();
         </script>
         {% endif %}
+        <!--[if lt IE 9]>
+        <script type="text/javascript" src="/js/html5.js"></script>
+        <![endif]-->
     </head>
     <body>
         <h1>As you probably figured out in the first few milliseconds you
@@ -50,5 +55,8 @@
         <div id="site">
             {{ content }}
         </div>
+
+        {% include footer.html %}
+        <script type="text/javascript" src="/js/main.js"></script>
     </body>
 </html>
