Added icons, added more robust reset code and many other small changes to the pages.

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <h4><a title="Group Bill" href="projects/groupbill.html">Group Bill</a></h4>
 <p>An iPhone application to split a restaurant bill fairly according to how much
-people have eaten/drink. 
+people have eaten/drink. Soon available on the iTunes App Store.</p>
 
-<h4><a title="iPhone app " href="#">iPhone application</a></h4>
+<h4><a title="Super Secret iPhone app " href="#">Super Secret iPhone application</a></h4>
 <p>An iPhone application I've written for a client that allows the user to take
 pictures, videos, audio recording and send them along with his position to a
 remote server. Not (yet) available on the iTunes store.</p>
