--- a/_less/helpers.less
+++ b/_less/helpers.less
@@ -60,3 +60,16 @@
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+.text-header() {
+    font-weight: bold;                                                         
+    line-height: 1em;                                                          
+    margin: 0;                                                                 
+    padding: 0 0 20px 0;
+}
+
+
+.marginless() {
+    margin:0;
+    padding:0;
+}
