--- a/_less/screen.less
+++ b/_less/screen.less
@@ -1,33 +1,115 @@
 @import "reset.less";
 @import "helpers.less";
+@import "icons.less";
 
-html{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+body > * {
+    clear: both;
+    margin: 0 auto;
+    width: 700px;
 }
 
-body{
+body > header {
+    border-bottom: 4px solid #ddd;
+    margin-bottom: 20px;
+    padding: 0 0 20px 0;
+    position: relative;
+}
+
+body > footer {
+    border-top: 4px solid #ddd;
+    margin-top: 20px;
+    padding: 10px 0;
+}
+
+html {
+    width: 100%;
+    height: 100%;
+    .marginless;
+}
+
+body {
     position: relative; // to enable correct absolute positioning
-    margin: 0;
-    padding: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
+    .marginless;
+    font-family: "Ubuntu", "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
     font-size: 13px;
     line-height: 18px;
     text-rendering: optimizeLegibility; 
+    margin: 20px;
+    overflow-y: scroll !important;
+    width:700px;
 }
 
-img{
-    border: 0;
+#main {
+    clear: both;
+}
+
+a {
+    color: #26a;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #0e4071;
+}
+
+h1 {
+    font-size: 48px;
+    letter-spacing: -1px;
+    .text-header;
+}
+
+h2 {
+    font-size: 24px;
+    letter-spacing: -1px;
+    .text-header;
+}
+
+h3 {
+    font-size: 20px;
+    letter-spacing: -1px;
+    .text-header;
+}
+
+h4, h5, h6 {
+    font-size: 16px;
+    .text-header;
 }
 
 ul{
-    // no bullets for lists
     list-style-type: none;
 }
 
 pre {
-padding: 0 30px;
-         .wrap;
+    padding: 0 30px;
+    .wrap;
+}
+
+ul.post-list {
+    font-size: 16px;
+    margin: 0 0 20px 0;
+    padding: 0;
+}
+
+ul.post-list > li {
+    border-bottom: 1px solid #ddd;
+    margin: 0 0 5px 0;
+    padding: 0 0 5px 0;
+}
+
+ul.post-list > li > time {
+    color: #999;
+    display: inline-block;
+    float: right;
+    //font-family: Menlo, Monaco, 'Bitstream Vera Sans Mono', 'Courier New', monospace;
+    font-family: "Ubuntu", "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
+    font-size: 12px;
+    white-space: nowrap;
+
+    /* For IE 7 */
+    zoom: 1;
+    *display: inline;
+}
+
+div.projects > p {
+    padding-bottom:20px;    
 }
