--- a/_less/screen.less
+++ b/_less/screen.less
@@ -21,6 +21,11 @@ body > footer {
     padding: 10px 0;
 }
 
+#main {
+    clear: both;
+    margin-bottom: 20px;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -36,7 +41,6 @@ body {
     text-rendering: optimizeLegibility; 
     margin: 20px;
     overflow-y: scroll !important;
-    width:700px;
 }
 
 #main {
@@ -112,4 +116,10 @@ ul.post-list > li > time {
 
 div.projects > p {
     padding-bottom:20px;    
+}
+
+#sitename {
+    float:right;
+    color:#333;
+    font-size:120%;
 }
