--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,18 +32,8 @@
         <![endif]-->
     </head>
     <body>
-        <header>
-            <h1><a href="/">marcodinacci.com</a></h1>
-            <nav>
-                <i class="icon-home"></i>&nbsp; <a href="/" title="Home">Home</a> ||
-                <a href="/blog.html" title="Blog">blog</a> ||
-                <a href="/about.html" title="About me">about</a> ||
-                <a href="http://github.com/mdinacci" title="github.com/mdinacci" rel="nofollow">github</a> ||
-                <!--<a href="http://twitter.com/MarcoDinacci" title="twitter.com/MarcoDinacci" rel="nofollow">twitter</a> ||-->
-                <a id="subscribe-link" href="http://feeds.feedburner.com/marcodinacci" title="Go to my RSS feed" rel="nofollow">subscribe</a>
-            </nav>
-        </header>
-
+        {% include header.html %}
+    
         <div id="main">
             {{ content }}
         </div>
