--- a/css/screen.css
+++ b/css/screen.css
@@ -38,9 +38,8 @@ input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-w
 input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 textarea{overflow:auto;vertical-align:top;}
-[class^="icon-"]{display:inline-block;width:14px;height:14px;vertical-align:text-top;background-image:url(../img/glyphicons-halflings.png);background-position:14px 14px;background-repeat:no-repeat;*margin-right:.3em;}
+[class^="icon-"]{display:inline-block;width:14px;height:14px;vertical-align:text-top;background-image:url("/img/glyphicons-halflings.png");background-repeat:no-repeat;*margin-right:.3em;}
 [class^="icon-"]:last-child{*margin-left:0;}
-.icon-white{background-image:url(../img/glyphicons-halflings-white.png);}
 .icon-glass{background-position:0 0;}
 .icon-music{background-position:-24px 0;}
 .icon-search{background-position:-48px 0;}
@@ -161,11 +160,14 @@ textarea{overflow:auto;vertical-align:top;}
 .icon-folder-open{background-position:-408px -120px;}
 .icon-resize-vertical{background-position:-432px -119px;}
 .icon-resize-horizontal{background-position:-456px -118px;}
+.icon-rss{display:inline-block;width:14px;height:14px;vertical-align:text-top;background-image:url("/img/rss_icon.png");background-repeat:no-repeat;*margin-right:.3em;background-position:0 0;}
+.icon-github{display:inline-block;width:14px;height:14px;vertical-align:text-top;background-image:url("/img/github_icon.png");background-repeat:no-repeat;*margin-right:.3em;background-position:0 0;}
 body>*{clear:both;margin:0 auto;width:700px;}
 body>header{border-bottom:4px solid #ddd;margin-bottom:20px;padding:0 0 20px 0;position:relative;}
 body>footer{border-top:4px solid #ddd;margin-top:20px;padding:10px 0;}
+#main{clear:both;margin-bottom:20px;}
 html{width:100%;height:100%;margin:0;padding:0;}
-body{position:relative;margin:0;padding:0;font-family:"Ubuntu","Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;font-size:13px;line-height:18px;text-rendering:optimizeLegibility;margin:20px;overflow-y:scroll !important;width:700px;}
+body{position:relative;margin:0;padding:0;font-family:"Ubuntu","Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;font-size:13px;line-height:18px;text-rendering:optimizeLegibility;margin:20px;overflow-y:scroll !important;}
 #main{clear:both;}
 a{color:#26a;text-decoration:none;}
 a:hover{color:#0e4071;}
@@ -179,3 +181,4 @@ ul.post-list{font-size:16px;margin:0 0 20px 0;padding:0;}
 ul.post-list>li{border-bottom:1px solid #ddd;margin:0 0 5px 0;padding:0 0 5px 0;}
 ul.post-list>li>time{color:#999;display:inline-block;float:right;font-family:"Ubuntu","Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;font-size:12px;white-space:nowrap;zoom:1;*display:inline;}
 div.projects>p{padding-bottom:20px;}
+#sitename{float:right;color:#333;font-size:120%;}
