--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,19 @@
 ---
 layout: default
 ---
-<div id="post">
+<article>
+    <header>
+    <h2><a title="Permalink to {{ page.title }}" href="{{ site.url }}{{ page.url }}">{{ page.title }}</a></h2>
+    Posted by <a href="/about.html">Marco Dinacci</a>
+    on <time datetime="{{ page.date | date: '%Y-%m-%d' }}" pubdate="pubdate">{{ page.date | date_to_string }}</time>
+    <!--— <a id="dsq-comment-count" data-disqus-identifier="{{ page.url }}" href="{{ page.url }}#disqus_thread">0 comments</a>-->
+    </header>
+
 {{ content }}
-</div>
+    <footer>
+    </footer>
+</article>
+
 
 <div id="related">
   <h2>Related Posts</h2>
