--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,4 @@
+@import "syntax.css";
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,tt,var,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;vertical-align:baseline;background:transparent;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block;}
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1;}
@@ -182,3 +183,4 @@ ul.post-list>li{border-bottom:1px solid #ddd;margin:0 0 5px 0;padding:0 0 5px 0;
 ul.post-list>li>time{color:#999;display:inline-block;float:right;font-family:"Ubuntu","Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;font-size:12px;white-space:nowrap;zoom:1;*display:inline;}
 div.projects>p{padding-bottom:20px;}
 #sitename{float:right;color:#333;font-size:120%;}
+#highlight{margin:10px;}
