--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,10 @@
-<h4><a title="Group Bill" href="projects/groupbill.html">Group Bill</a></h4>
-<p>An iPhone application to split a restaurant bill fairly according to how much
-people have eaten/drink. Soon available on the iTunes App Store.</p>
+<button class="btn btn-danger" data-toggle="collapse" data-target="#demo">
+    Group Bill
+</button>
+<div id="demo" class="collapse in">An iPhone application to split a restaurant bill fairly according to how much
+people have eaten/drink. Soon available on the iTunes App Store.</div>
 
-<h4><a title="Super Secret iPhone app " href="#">Super Secret iPhone application</a></h4>
+<h4><a title="Unmaned iPhone app " href="#">Unnamed iPhone application</a></h4>
 <p>An iPhone application I've written for a client that allows the user to take
 pictures, videos, audio recording and send them along with his position to a
 remote server. Not (yet) available on the iTunes store.</p>
