--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,16 @@
         <link href="http://feeds.feedburner.com/{{site.feedburner.id}}" rel="alternate"
         title="{{ site.title }}" type="application/atom+xml" />
         {% endif %}
-
+        
         <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
         <link id='ubuntu' href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css' />
 
         <!--[if lt IE 9]>
-        <script type="text/javascript" src="/js/html5.js"></script>
+        <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="/js/bootstrap.js"></script>
     </head>
     <body>
         {% include header.html %}
