Added deploy option to Rakefile using rsync, minor tweaks to pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,6 @@
         <!--<a href="http://twitter.com/MarcoDinacci" title="twitter.com/MarcoDinacci" rel="nofollow">twitter</a> ||-->
         <i class="rss-icon"></i>&nbsp;<a id="subscribe-link" href="http://feeds.feedburner.com/marcodinacci" 
             title="Go to my RSS feed" rel="nofollow">Subscribe</a>
-        <span id="sitename">// marcodinacci.com</span>
+        <span id="sitename">// intransitione.com</span>
     </nav>
 </header>
