--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         {% endif %}
         {% if site.feedburner %}
         <link href="http://feeds.feedburner.com/{{site.feedburner.id}}" rel="alternate"
-        title="{{ site.title }}" type="application/atom+xml" />
+        title="{{ site.title }}" type="application/rss2" />
         {% endif %}
         
         <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
