Minor improvements to css and movie suggestions page

--- a/_less/helpers.less
+++ b/_less/helpers.less
@@ -73,3 +73,20 @@
     margin:0;
     padding:0;
 }
+
+.align-right {
+    .marginless; // reset margins
+    margin-left:8px;
+    margin-top:8px;
+    margin-bottom:8px;
+    float:right;
+}
+
+.align-left {
+    .marginless; // reset margins
+    margin-right:8px;
+    margin-top:8px;
+    margin-bottom:8px;
+    float:left;
+}
+
