--- a/_less/screen.less
+++ b/_less/screen.less
@@ -1,8 +1,5 @@
-@import "reset.less";
+//@import "reset.less";
 @import "helpers.less";
-@import "icons.less";
-@import "syntax.css";
-@import "mobile.less";
 
 body > * {
     clear: both;
@@ -28,23 +25,20 @@ body > footer {
     margin-bottom: 20px;
 }
 
+/*
 html {
     width: 100%;
     height: 100%;
     .marginless;
-}
+} */
 
 body {
-    //position: relative; // to enable correct absolute positioning
-    .marginless;
-    font: 13/20px "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
-    text-rendering: optimizeLegibility; 
+    background-color: #fff;
+    color: #333;
+    font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 20px;
     overflow-y: scroll !important;
-}
-
-#main {
-    clear: both;
+    text-rendering: optimizelegibility;
 }
 
 a {
@@ -88,31 +82,6 @@ pre {
     .wrap;
 }
 
-ul.post-list {
-    font-size: 16px;
-    margin: 0 0 20px 0;
-    padding: 0;
-}
-
-ul.post-list > li {
-    border-bottom: 1px solid #ddd;
-    margin: 0 0 5px 0;
-    padding: 0 0 5px 0;
-}
-
-ul.post-list > li > time {
-    color: #999;
-    display: inline-block;
-    float: right;
-    font-family: Menlo, Monaco, 'Bitstream Vera Sans Mono', 'Courier New', monospace;
-    font-size: 12px;
-    white-space: nowrap;
-
-    /* For IE 7 */
-    zoom: 1;
-    *display: inline;
-}
-
 div.projects > p {
     padding-bottom:20px;    
 }
@@ -127,14 +96,11 @@ div.highlight {
     margin: 10px;
 }
 
-article {
-    clear: both;
-    margin-bottom: 20px;
-    font-size: 13px;
-}
+// Articles
 article > header {
     border-bottom: 1px solid #ddd;
     color: #999;
+    font-size: 13px;
     margin-bottom: 20px;
     padding-bottom: 10px;
 }
@@ -146,8 +112,16 @@ article > header > h2 {
 article > header > h2 > a {
     color: #333 !important;
 }
+article img {
+    display: block;
+    margin: 10px auto;
+}
 article > footer {
     margin-top: 20px;
+}
+article > footer > p, article > footer > span {
+    color: #999;
+    font-size: 13px;
 }
 
 article > img {
@@ -159,3 +133,68 @@ article > img:hover {
     border-color: #AAA;
     opacity: 1.0;
 }
+
+/* Post and project lists */
+
+#related-posts {
+    color: #333;
+    font-size: 14px;
+}
+#related-posts h3 {
+    padding-bottom: 10px;
+}
+#related-posts ul {
+    padding-left: 40px;
+}
+#related-posts li > time {
+    color: #999;
+    font-size: 12px;
+    margin-left: .4em;
+    white-space: nowrap;
+}
+ul.post-list {
+    font-size: 16px;
+    list-style: none;
+    margin: 0 0 20px 0;
+    padding: 0;
+}
+ul.post-list > li {
+    border-bottom: 1px solid #ddd;
+    margin: 0 0 5px 0;
+    padding: 0 0 5px 0;
+}
+ul.post-list > li > time {
+    color: #999;
+    display: inline-block;
+    float: right;
+    font-family: Menlo, Monaco, 'Bitstream Vera Sans Mono', 'Courier New', monospace;
+    font-size: 12px;
+    white-space: nowrap;
+
+    /* For IE 7 */
+    zoom: 1;
+    *display: inline;
+}
+#blog-archive > h3 {
+    color: #999;
+    float: left;
+}
+#blog-archive > ul.post-list {
+    margin-bottom: 0;
+}
+#blog-archive > ul.post-list > li {
+    margin-left: 60px;
+}
+div.project-list li {
+    padding: 5px 0;
+}
+div.project-list h4 {
+    border-bottom: 1px solid #ddd;
+    font-weight: normal;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+}
+
+@import "mobile.less";
+@import "icons.less";
+@import "syntax.css";
