--- a/_less/screen.less
+++ b/_less/screen.less
@@ -34,6 +34,7 @@ html {
 
 body {
     background-color: #fff;
+    //background: url("/img/bg.jpg");
     color: #333;
     font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 20px;
