--- a/_less/screen.less
+++ b/_less/screen.less
@@ -34,7 +34,6 @@ html {
 
 body {
     background-color: #fff;
-    //background: url("/img/bg.jpg");
     color: #333;
     font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 20px;
@@ -53,29 +52,28 @@ a:hover {
 
 h1 {
     font-size: 48px;
-    letter-spacing: -1px;
     .text-header;
 }
 
 h2 {
     font-size: 24px;
-    letter-spacing: -1px;
     .text-header;
 }
 
 h3 {
     font-size: 20px;
-    letter-spacing: -1px;
     .text-header;
 }
 
 h4, h5, h6 {
     font-size: 16px;
-    .text-header;
+    padding-bottom:0px;
+    border-bottom:1px solid #ddd;
+    font-weight:normal;
 }
 
 ul{
-    list-style-type: none;
+    //list-style-type: none;
 }
 
 pre {
@@ -84,7 +82,7 @@ pre {
 }
 
 div.projects > p {
-    padding-bottom:20px;    
+    padding-bottom:15px;
 }
 
 #sitename {
