--- a/css/screen.css
+++ b/css/screen.css
@@ -8,13 +8,12 @@ body>footer{border-top:4px solid #ddd;margin-top:20px;padding:10px 0;}
 body{background-color:#fff;color:#333;font:14px/20px 'Helvetica Neue',Helvetica,Arial,sans-serif;margin:20px;overflow-y:scroll !important;text-rendering:optimizelegibility;}
 a{color:#26a;text-decoration:none;}
 a:hover{color:#0e4071;}
-h1{font-size:48px;letter-spacing:-1px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h2{font-size:24px;letter-spacing:-1px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h3{font-size:20px;letter-spacing:-1px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h4,h5,h6{font-size:16px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-ul{list-style-type:none;}
+h1{font-size:48px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
+h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
+h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
+h4,h5,h6{font-size:16px;padding-bottom:0px;border-bottom:1px solid #ddd;font-weight:normal;}
 pre{padding:0 30px;text-wrap:wrap;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word;}
-div.projects>p{padding-bottom:20px;}
+div.projects>p{padding-bottom:15px;}
 #sitename{float:right;color:#333;font-size:120%;}
 div.highlight{margin:10px;}
 article>header{border-bottom:1px solid #ddd;color:#999;font-size:13px;margin-bottom:20px;padding-bottom:10px;}
