Bit of a messy commit...added a normalize.css file though not used yet, need to test first; fixed various posts, changed pygments syntax color, added headsup and thumbnail classes and more...

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -30,7 +30,7 @@ to explain how the motion detection works.</p>
 <p>A tool I've written to learn ruby and while looking for a job. It scrapes the content of
 <a href="http://careers.stackoverflow.com">careers.stackoverflow.com</a> and produces a set
 of visualizations to highlight the most used technologies required by the companies
-looking for developers. I used the graphics in an article about the <a href="">job market</a>. 
+looking for developers. I used the graphics in an article about the <a href="http://www.intransitione.com/blog/look-it-job-market/">job market</a>. 
 </p>
 
 <p>More projects available on my <a href="https://github.com/mdinacci">GitHhub</a> page.</p>
