--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,24 +11,28 @@ layout: default
 
 {{ content }}
     <footer>
-    </footer>
-</article>
+        <span id="share-buttons-label">Share this:</span><div id="share-buttons"></div>
+        <p id="like-and-subscribe">Liked this post? Subscribe to my <a href="{{ site.feed }}" rel="nofollow">RSS feed</a>.</p>
 
+    <div id="related">
+      <h2>Related Posts</h2>
+      <ul class="posts">
+        {% for post in site.related_posts limit:3 %}
+          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
 
-<div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
-
-<div id="share">
-</div>
+<script type="text/javascript">                                                
+    var intrcom_title = '{{ page.title }}';                                         
+    var intrcom_slug  = '{{ page.url }}';                                           
+    var intrcom_url   = '{{ site.url }}{{ page.url }}';                             
+</script>
 
 <!--
 <div id="disqus_thread"></div>
 <script type="text/javascript" src="http://disqus.com/forums/jqr/embed.js"></script>
 <noscript><a href="http://jqr.disqus.com/?url=ref">View comments.</a></noscript>
 -->
+    </footer>
+</article>
