--- a/_less/helpers.less
+++ b/_less/helpers.less
@@ -44,6 +44,15 @@
     background-image: linear-gradient(@origin, rgba(0,0,0,0.0), rgba(0,0,0,@alpha));
 }
 
+.alert {
+  padding: 8px 35px 8px 14px;
+  margin-bottom: 18px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #fcf8e3;
+  border: 1px solid #fbeed5;
+  .border-radius(4px);
+}
+
 .wrap () {
   text-wrap: wrap;
   white-space: pre-wrap;       /* css-3 */
@@ -59,7 +68,6 @@
     margin: 0;                                                                 
     padding: 0 0 15px 0;
 }
-
 
 .marginless() {
     margin:0;
