--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,4 @@
+.alert{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
 .align-right{margin:0;padding:0;margin-left:8px;margin-top:8px;margin-bottom:8px;float:right;}
 .align-left{margin:0;padding:0;margin-right:8px;margin-top:8px;margin-bottom:8px;float:left;}
 #contact_form{color:#666;}#contact_form input,#contact_form select,#contact_form textarea{font-size:11px;width:300px;height:28px;border:#CCC solid 1px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
