--- a/css/screen.css
+++ b/css/screen.css
@@ -1,21 +1,23 @@
+@import "normalize.css";
 @import "syntax.css";
+.alert{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
 .align-right{margin:0;padding:0;margin-left:8px;margin-top:8px;margin-bottom:8px;float:right;}
 .align-left{margin:0;padding:0;margin-right:8px;margin-top:8px;margin-bottom:8px;float:left;}
 body>*{clear:both;margin:0 auto;width:700px;}
 body>header{border-bottom:4px solid #ddd;margin-bottom:20px;padding:0 0 20px 0;position:relative;}
 body>footer{border-top:4px solid #ddd;margin-top:20px;padding:10px 0;}
 #main{clear:both;margin-bottom:20px;}
-body{background-color:#fff;color:#333;font:14px/20px 'Corben',serif,'Helvetica Neue',Helvetica,Arial,sans-serif;margin:20px;overflow-y:scroll !important;text-rendering:optimizelegibility;}
+body{background-color:#fff;color:#333;font:14px/20px 'Cantarell',sans-serif;margin:20px;overflow-y:scroll !important;text-rendering:optimizelegibility;}
 a{color:#26a;text-decoration:none;}
 a:hover{color:#0e4071;}
-h1{font-size:48px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;border-bottom:1px solid #ddd;}
+h1{font-size:48px;font-weight:bold;line-height:1em;margin:0;padding:0 0 15px 0;}
+h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:0 0 15px 0;}
+h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:0 0 15px 0;padding-bottom:5px;border-bottom:1px solid #ddd;}
 h4,h5,h6{font-size:16px;border-bottom:1px solid #ddd;font-weight:normal;}
 pre{padding:0 30px;text-wrap:wrap;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word;}
-div.projects>p{padding-bottom:15px;}
+div.projects>p{padding-bottom:10px;}
 #sitename{float:right;color:#333;font-size:120%;}
-div.highlight{margin:10px;}
+div.highlight{margin:10px;padding:10px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
 article>header{border-bottom:1px solid #ddd;color:#999;font-size:13px;margin-bottom:20px;padding-bottom:10px;}
 article>header>h2{color:#333;margin:0 0 5px 0;padding:0;}
 article>header>h2>a{color:#333 !important;}
@@ -24,7 +26,9 @@ article>footer{margin-top:20px;}
 article>footer>p,article>footer>span{color:#999;font-size:13px;}
 article>img{border:1px solid #CCC;opacity:.9;}
 article>img:hover{border-color:#AAA;opacity:1.0;}
-#simple code{font:13px/18px Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace;background-color:#eee;}
+#like-and-subscribe{display:inline-block;float:right;margin-top:4px;}
+.simple{font:13px/18px Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace;background-color:#eee;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;padding:3px;border:solid #ccc 1px;}
+.headsup{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#d9edf7;border-color:#bce8f1;color:#3a87ad;}
 #related-posts{color:#333;font-size:14px;}
 #related-posts h3{padding-bottom:10px;}
 #related-posts ul{padding-left:40px;}
@@ -36,7 +40,17 @@ ul.post-list>li>time{color:#999;display:inline-block;float:right;font-family:Men
 #blog-archive>ul.post-list{margin-bottom:0;}
 #blog-archive>ul.post-list>li{margin-left:60px;}
 div.project-list li{padding:5px 0;}
-div.project-list h4{border-bottom:1px solid #ddd;font-weight:normal;margin-bottom:5px;padding-bottom:5px;}
+div.project-list h4{border-bottom:1px solid #ddd;font-weight:normal;}
+#share-buttons{display:inline-block;height:20px;margin:0 0 20px 0;padding:0;}
+#share-buttons-label{display:inline-block;margin-right:8px;vertical-align:4px;}
+iframe.twitter-share-button{margin-right:10px;}
+iframe.facebook-like-button{border:0;height:20px;margin-right:9px;overflow:hidden;width:50px;}
+span.IN-widget{margin-right:10px;}
+iframe.twitter-follow-button{display:block;margin-top:5px;}
+.thumbnail{display:block;padding:4px;line-height:1;border:1px solid #ddd;border:1px solid #ddd;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);-webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:0 1px 1px rgba(0, 0, 0, 0.075);}
+a.thumbnail:hover{border-color:#0088cc;-webkit-box-shadow:0 1px 4px rgba(0, 105, 214, 0.25);-moz-box-shadow:0 1px 4px rgba(0, 105, 214, 0.25);box-shadow:0 1px 4px rgba(0, 105, 214, 0.25);}
+.thumbnail>img{display:block;max-width:100%;margin-left:auto;margin-right:auto;}
+.thumbnail .caption{padding:9px;}
 @media only screen and (max-device-width:960px){body>*{width:100%;} body{-webkit-text-size-adjust:none;margin:10px;} blockquote{margin:0 20px;} body>header>nav{margin:20px 0 0 -4px;position:static;} body>header>nav>a{margin:0 4px;} article img{height:auto;max-width:100%;} #like-and-subscribe{display:block;float:none;margin-top:0;} #dsq-comment-count{background-position:left 1px;} ul.post-list>li{color:#26a;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;} ul.post-list>li>time{margin-left:1em;} #blog-archive>h3{float:none;padding:20px 0;} #blog-archive>h3:first-child{padding-top:0;} #blog-archive>ul.post-list>li{margin-left:0;} img.gravatar{height:100px !important;width:100px !important;} body>footer br{display:none;}}[class^="icon-"]{display:inline-block;width:14px;height:14px;vertical-align:text-top;background-image:url("/img/glyphicons-halflings.png");background-repeat:no-repeat;*margin-right:.3em;}
 [class^="icon-"]:last-child{*margin-left:0;}
 .icon-glass{background-position:0 0;}
