All posts formatted. At last.

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -94,8 +94,8 @@ div.projects > p {
 }
 
 div.highlight {
-    margin: 10px;
-    padding: 10px;
+    margin: 5px;
+    padding: 5px;
     .border-radius;
 }
 
@@ -161,6 +161,17 @@ article > img:hover {
     color: #3a87ad;
 }
 
+.warning {
+    .alert;
+}
+
+.danger {
+    .alert;
+    background-color: #f2dede;
+    border-color: #eed3d7;
+    color: #b94a48;
+}
+
 #related-posts {
     color: #333;
     font-size: 14px;
@@ -221,12 +232,20 @@ div.project-list h4 {
 }
 
 
-/* Share buttons at the bottom of each blog post */
+/* Sharing section */
+
+#sharing {
+    margin-top:10px;
+    margin-bottom:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    border-top: 1px dotted #ccc;
+    border-bottom: 1px dotted #ccc;
+}
 
 #share-buttons {
     display: inline-block;
     height: 20px;
-    margin: 0 0 20px 0;
     padding: 0;
 }
 
