--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,20 +9,23 @@ layout: default
     <!--— <a id="dsq-comment-count" data-disqus-identifier="{{ page.url }}" href="{{ page.url }}#disqus_thread">0 comments</a>-->
     </header>
 
-{{ content }}
+    {{ content }}
+
     <footer>
-        <span id="share-buttons-label">Share this:</span><div id="share-buttons"></div>
-        <p id="like-and-subscribe">Liked this post? Subscribe to my <a href="{{ site.feed }}" rel="nofollow">RSS feed</a>.</p>
+        <section id="sharing">
+            <span id="share-buttons-label">Share this:</span><div id="share-buttons"></div>
+            <p id="like-and-subscribe">Liked this post? Subscribe to my <a href="{{ site.feed }}" rel="nofollow">RSS feed</a>.</p>
+        </section>
 
-    <div id="related">
-      <h2>Related Posts</h2>
-      <ul class="posts">
-        {% for post in site.related_posts limit:3 %}
-          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-
+        <section id="related">
+          <h2>Related Posts</h2>
+          <ul class="posts">
+            {% for post in site.related_posts limit:3 %}
+              <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+            {% endfor %}
+          </ul>
+        </section>
+    </footer>
 <script type="text/javascript">                                                
     var intrcom_title = '{{ page.title }}';                                         
     var intrcom_slug  = '{{ page.url }}';                                           
@@ -34,5 +37,4 @@ layout: default
 <script type="text/javascript" src="http://disqus.com/forums/jqr/embed.js"></script>
 <noscript><a href="http://jqr.disqus.com/?url=ref">View comments.</a></noscript>
 -->
-    </footer>
 </article>
