--- a/css/screen.css
+++ b/css/screen.css
@@ -17,7 +17,7 @@ h4,h5,h6{font-size:16px;border-bottom:1px solid #ddd;font-weight:normal;}
 pre{padding:0 30px;text-wrap:wrap;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word;}
 div.projects>p{padding-bottom:10px;}
 #sitename{float:right;color:#333;font-size:120%;}
-div.highlight{margin:10px;padding:10px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
+div.highlight{margin:5px;padding:5px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
 article>header{border-bottom:1px solid #ddd;color:#999;font-size:13px;margin-bottom:20px;padding-bottom:10px;}
 article>header>h2{color:#333;margin:0 0 5px 0;padding:0;}
 article>header>h2>a{color:#333 !important;}
@@ -29,6 +29,8 @@ article>img:hover{border-color:#AAA;opacity:1.0;}
 #like-and-subscribe{display:inline-block;float:right;margin-top:4px;}
 .simple{font:13px/18px Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace;background-color:#eee;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;padding:3px;border:solid #ccc 1px;}
 .headsup{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#d9edf7;border-color:#bce8f1;color:#3a87ad;}
+.warning{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
+.danger{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#f2dede;border-color:#eed3d7;color:#b94a48;}
 #related-posts{color:#333;font-size:14px;}
 #related-posts h3{padding-bottom:10px;}
 #related-posts ul{padding-left:40px;}
@@ -41,7 +43,8 @@ ul.post-list>li>time{color:#999;display:inline-block;float:right;font-family:Men
 #blog-archive>ul.post-list>li{margin-left:60px;}
 div.project-list li{padding:5px 0;}
 div.project-list h4{border-bottom:1px solid #ddd;font-weight:normal;}
-#share-buttons{display:inline-block;height:20px;margin:0 0 20px 0;padding:0;}
+#sharing{margin-top:10px;margin-bottom:20px;padding-top:10px;padding-bottom:10px;border-top:1px dotted #ccc;border-bottom:1px dotted #ccc;}
+#share-buttons{display:inline-block;height:20px;padding:0;}
 #share-buttons-label{display:inline-block;margin-right:8px;vertical-align:4px;}
 iframe.twitter-share-button{margin-right:10px;}
 iframe.facebook-like-button{border:0;height:20px;margin-right:9px;overflow:hidden;width:50px;}
