Added new post, finished comments integration, minor layout and style changes

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,4 @@
-<h4><a title="Group Bill " href="#">Group Bill</a></h4>
+<h4><a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a></h4>
 <p>An iPhone application to split a restaurant bill fairly according to how much
 people have eaten/drink. Soon available on the iTunes App Store.</p>
 
