--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <header>
     <nav>
-        <i class="icon-home"></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;|
-        <i class="icon-pencil"></i>&nbsp;<a href="/blog.html" title="Blog">Blog</a>  &nbsp;|
-        <i class="icon-user"></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;|
-        <i class="icon-github"></i>&nbsp;<a href="http://github.com/mdinacci" title="github.com/mdinacci" rel="nofollow">GitHub</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;|
+        <i></i>&nbsp;<a href="/blog.html" title="Blog">Blog</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;|
+        <i></i>&nbsp;<a href="http://github.com/mdinacci" title="github.com/mdinacci" rel="nofollow">GitHub</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/support.html" title="Support" rel="nofollow">Support</a>  &nbsp;|
         <!--<a href="http://twitter.com/MarcoDinacci" title="twitter.com/MarcoDinacci" rel="nofollow">twitter</a> ||-->
         <i class="rss-icon"></i>&nbsp;<a id="subscribe-link" href="http://feeds.feedburner.com/Intransitionecom" 
             title="Go to my RSS feed" rel="nofollow">Subscribe</a>
