--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,40 +1,57 @@
 ---
 layout: default
+comments: true
 ---
-<article>
-    <header>
-    <h2><a title="Permalink to {{ page.title }}" href="{{ site.url }}{{ page.url }}">{{ page.title }}</a></h2>
-    Posted by <a href="/about.html">Marco Dinacci</a>
-    on <time datetime="{{ page.date | date: '%Y-%m-%d' }}" pubdate="pubdate">{{ page.date | date_to_string }}</time>
-    <!--— <a id="dsq-comment-count" data-disqus-identifier="{{ page.url }}" href="{{ page.url }}#disqus_thread">0 comments</a>-->
-    </header>
+    <article>
+        <header>
+        <h2><a title="Permalink to {{ page.title }}" href="{{ site.url }}{{ page.url }}">{{ page.title }}</a></h2>
+        Posted by <a href="/about.html">Marco Dinacci</a>
+        on <time datetime="{{ page.date | date: '%Y-%m-%d' }}" pubdate="pubdate">{{ page.date | date_to_string }}</time>
+        <a id="dsq-comment-count" data-disqus-identifier="{{ site.url }}{{ page.url }}" href="{{ page.url }}#disqus_thread">0 comments</a>
+        </header>
 
-    {{ content }}
+        {{ content }}
 
-    <footer>
-        <section id="sharing">
-            <span id="share-buttons-label">Share this:</span><div id="share-buttons"></div>
-            <p id="like-and-subscribe">Liked this post? Subscribe to my <a href="{{ site.feed }}" rel="nofollow">RSS feed</a>.</p>
-        </section>
+        <footer>
+            <section id="sharing">
+                <span id="share-buttons-label">Share this:</span><div id="share-buttons"></div>
+                <p id="like-and-subscribe">Liked this post? Subscribe to my <a href="{{ site.feed }}" rel="nofollow">RSS feed</a>.</p>
+            </section>
 
-        <section id="related">
-          <h2>Related Posts</h2>
-          <ul class="posts">
-            {% for post in site.related_posts limit:3 %}
-              <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %}
-          </ul>
-        </section>
-    </footer>
-<script type="text/javascript">                                                
-    var intrcom_title = '{{ page.title }}';                                         
-    var intrcom_slug  = '{{ page.url }}';                                           
-    var intrcom_url   = '{{ site.url }}{{ page.url }}';                             
-</script>
+            <section id="related">
+              <h2>Related Posts</h2>
+              <ul class="posts">
+                {% for post in site.related_posts limit:3 %}
+                  <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+                {% endfor %}
+              </ul>
+            </section>
 
-<!--
-<div id="disqus_thread"></div>
-<script type="text/javascript" src="http://disqus.com/forums/jqr/embed.js"></script>
-<noscript><a href="http://jqr.disqus.com/?url=ref">View comments.</a></noscript>
--->
-</article>
+            <section id="comments">
+                <h2>Comments</h2>
+                <div id="disqus_thread"></div>
+            </section>
+        </footer>
+        <script type="text/javascript">                                                
+            var intrcom_title = '{{ page.title }}';                                         
+            var intrcom_slug  = '{{ page.url }}';                                           
+            var intrcom_url   = '{{ site.url }}{{ page.url }}';
+            {% if page.comments %}
+            var disqus_shortname = 'intransitionecom'; 
+            var disqus_url = '{{ site.url }}{{ page.url }}';
+            var disqus_identifier = '{{ site.url }}{{ page.url }}';
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            (function () {
+                var s = document.createElement('script'); s.async = true;
+                s.type = 'text/javascript';
+                s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(s);
+            }());
+            {% endif %}
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </article>
