Minor changes to biography and posts

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,16 +1,16 @@
 <h4><a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a></h4>
 <p>An iPhone application to split a restaurant bill fairly according to how much
-people have eaten/drink. Soon available on the iTunes App Store.</p>
+people have eaten/drink. <a href="http://itunes.apple.com/us/app/group-bill/id504949463?ls=1&mt=8" title="Group Bill on iTunes Store">Available on the iTunes App Store</a>.</p>
 
 <h4><a title="Unmaned iPhone app " href="#">Unnamed iPhone application</a></h4>
 <p>An iPhone application I've written for a client that allows the user to take
 pictures, videos, audio recording and send them along with his position to a
 remote server. Not (yet) available on the iTunes store.</p>
-
+<!--
 <h4><a title="MDTouch" href="#">MDTouch</a></h4>
 <p>A collection of Objective-C categories and utility classes I use in my projects.<br/>
 Soon on GitHub.</p>
-
+-->
 <h4><a title="Movie Suggestions" href="https://market.android.com/details?id=com.marcodinacci.android.movierec">Movie Suggestions</a></h4>
 <p>An Android application that suggests a list of movies to watch given a movie
 title. It uses the Rottentomatoes API to retrieve movies informations. Uses my
