Added icons to projects, tweaked h3

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,9 @@
-<h4><a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a></h4>
+<h3><img class="project-icon" src="/img/icons/group_bill.png"/><a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a>
+</h3>
 <p>An iPhone application to split a restaurant bill fairly according to how much
 people have eaten/drink. <a href="http://itunes.apple.com/us/app/group-bill/id504949463?ls=1&mt=8" title="Group Bill on iTunes Store">Available on the iTunes App Store</a>.</p>
 
-<h4><a title="Unmaned iPhone app " href="#">Unnamed iPhone application</a></h4>
+<h3><img class="project-icon" src="/img/icons/generic_ios_icon.png"/><a title="iPhone app" href="#">iPhone application</a></h3>
 <p>An iPhone application I've written for a client that allows the user to take
 pictures, videos, audio recording and send them along with his position to a
 remote server. Not (yet) available on the iTunes store.</p>
@@ -11,23 +12,22 @@ remote server. Not (yet) available on the iTunes store.</p>
 <p>A collection of Objective-C categories and utility classes I use in my projects.<br/>
 Soon on GitHub.</p>
 -->
-<h4><a title="Movie Suggestions" href="https://market.android.com/details?id=com.marcodinacci.android.movierec">Movie Suggestions</a></h4>
+<h3><img class="project-icon" src="/img/icons/moviesugg.png"/><a title="Movie Suggestions" href="https://market.android.com/details?id=com.marcodinacci.android.movierec">Movie Suggestions</a></h4>
 <p>An Android application that suggests a list of movies to watch given a movie
 title. It uses the Rottentomatoes API to retrieve movies informations. Uses my
 <b>rottentomatoes-for-android</b> open source library.</p>
 
-<h4><a title="Pic In Motion" href="https://github.com/mdinacci/PicInMotion/tree/standalone">PicInMotion</a></h4>
+<h3><img class="project-icon" src="/img/icons/picmotion.png"/><a title="Pic In Motion" href="https://github.com/mdinacci/PicInMotion/tree/standalone">PicInMotion</a></h3>
 <p>An Android <em>proof of concept</em> application that demonstrate how to
 perform motion detection using an Android phone and its camera.
 I’ve also written an <a href="http://www.intransitione.com/blog/how-to-detect-motion-on-an-android-device">article</a> 
 to explain how the motion detection works.</p>
 
-<h4><a title="rottentomatoes-for-android" href="https://github.com/mdinacci/rottentomatoes-for-android">rottentomatoes-for-android</a></h4>
+<h3><img class="project-icon" src="/img/icons/generic_android.png"/><a title="rottentomatoes-for-android" href="https://github.com/mdinacci/rottentomatoes-for-android">rottentomatoes-for-android</a></h3>
 <p>An Open Source Java library that implements the <a href="http://developer.rottentomatoes.com/">Rotten Tomatoes API</a>.</p>
 
-
-<h4><a title="careers-crawler" href="https://github.com/mdinacci/careers-crawler">careers-crawler</a></h4>
-<p>A tool I've written to learn ruby and while looking for a job. It scrapes the content of
+<h3><img class="project-icon" src="/img/icons/ruby_logo.png"/><a title="careers-crawler" href="https://github.com/mdinacci/careers-crawler">careers-crawler</a></h3>
+<p>A tool I've written while looking for a job in order to learn ruby. It scrapes the content of
 <a href="http://careers.stackoverflow.com">careers.stackoverflow.com</a> and produces a set
 of visualizations to highlight the most used technologies required by the companies
 looking for developers. I used the graphics in an article about the <a href="http://www.intransitione.com/blog/look-it-job-market/">job market</a>. 
