--- a/css/screen.css
+++ b/css/screen.css
@@ -10,12 +10,12 @@ body>footer{border-top:4px solid #ddd;margin-top:20px;padding:10px 0;}
 body{background-color:#fff;color:#333;font:14px/20px 'Cantarell',sans-serif;margin:20px;overflow-y:scroll !important;text-rendering:optimizelegibility;}
 a{color:#26a;text-decoration:none;}
 a:hover{color:#0e4071;}
-h1{font-size:48px;font-weight:bold;line-height:1em;margin:0;padding:0 0 15px 0;}
-h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:0 0 15px 0;}
-h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:0 0 15px 0;padding-bottom:5px;border-bottom:1px solid #ddd;}
+h1{font-size:48px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
+h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
+h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;padding-bottom:5px;border-bottom:1px solid #ddd;font-weight:bold;}
 h4,h5,h6{font-size:16px;border-bottom:1px solid #ddd;font-weight:normal;}
 pre{padding:0 30px;text-wrap:wrap;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word;}
-div.projects>p{padding-bottom:10px;}
+div.projects>p{padding-bottom:20px;}
 #sitename{float:right;color:#333;font-size:120%;}
 div.highlight{margin:5px;padding:5px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
 article>header{border-bottom:1px solid #ddd;color:#999;font-size:13px;margin-bottom:20px;padding-bottom:10px;}
@@ -28,6 +28,8 @@ article>img{border:1px solid #CCC;opacity:.9;}
 article>img:hover{border-color:#AAA;opacity:1.0;}
 #like-and-subscribe{display:inline-block;float:right;margin-top:4px;}
 .simple{font:13px/18px Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace;background-color:#eee;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;padding:3px;border:solid #ccc 1px;}
+.project-icon{width:48px;height:48px;padding-right:5px;vertical-align:middle;opacity:.9;}
+.project-icon:hover{opacity:1.0;}
 .success{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#dff0d8;border-color:#d6e9c6;color:#468847;}
 .headsup{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#d9edf7;border-color:#bce8f1;color:#3a87ad;}
 .warning{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
