Added twim image and refactored the description. It's a hack waiting to be solved with a proper gallery

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,9 +4,13 @@
 people have eaten/drink. <a href="http://itunes.apple.com/us/app/group-bill/id504949463?ls=1&mt=8" title="Group Bill on iTunes Store">Available on the iTunes App Store</a>.</p>
 
 <h3><img class="project-icon" src="/img/icons/generic_ios_icon.png"/><a title="iPhone app" href="#">iPhone application</a></h3>
-<p>An iPhone application I've written for a client that allows the user to take
-pictures, videos, audio recording and send them along with his position to a
-remote server. Not (yet) available on the iTunes store.</p>
+<img class="thumbnail" style="float:right;margin:5px" src="/img/twim.png" />
+<p>An iPhone application I've written for a client that allows the user to build a report in case of an emergency based on 
+pictures, videos, text messages and audio recordings. </p>
+<p>The report is then saved on the device and sent to remote servers
+along with the user position where it will be analyzed and dispatched to the competent authorithies.
+</p>
+<p>Not (yet) available on the iTunes store.</p>
 <!--
 <h4><a title="MDTouch" href="#">MDTouch</a></h4>
 <p>A collection of Objective-C categories and utility classes I use in my projects.<br/>
