--- a/_less/helpers.less
+++ b/_less/helpers.less
@@ -74,6 +74,8 @@
     padding:0;
 }
 
+// TODO refactor these three into a single one !!
+
 .align-right {
     .marginless; // reset margins
     margin-left:8px;
@@ -90,3 +92,10 @@
     float:left;
 }
 
+.align-center {
+    .marginless; // reset margins
+    margin-left:8px;
+    margin-top:8px;
+    margin-bottom:8px;
+    float:center;
+}
