--- a/_less/screen.less
+++ b/_less/screen.less
@@ -132,11 +132,13 @@ article > footer > p, article > footer > span {
 article > img {
     border: 1px solid #CCC;
     opacity: .9;
+    filter: alpha(opacity=90);
 }
 
 article > img:hover {
     border-color: #AAA;
     opacity: 1.0;
+    filter: alpha(opacity=100);
 }
 
 #like-and-subscribe {
@@ -162,10 +164,12 @@ article > img:hover {
     padding-right:5px;
     vertical-align:middle;
     opacity: .9;
+    filter: alpha(opacity=90);
 }
 
 .project-icon:hover {
     opacity: 1.0;
+    filter: alpha(opacity=100);
 }
 
 /* Bootstrap-style boxes */
