Added new images, resized project icons to 40x40, added popup script.

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -159,8 +159,8 @@ article > img:hover {
 }
 
 .project-icon {
-    width:48px;
-    height:48px;
+    width:40px;
+    height:40px;
     padding-right:5px;
     vertical-align:middle;
     opacity: .9;
@@ -376,3 +376,4 @@ a.dsq-brlink {
 
 @import "mobile.less";
 @import "syntax.css";
+@import "mdpopup.css";
