--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,40 +1,63 @@
-<h3><img class="project-icon" src="/img/icons/group_bill.png"/><a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a>
+<script src="/js/mdpopup.js"></script>
+<h3>
+	<img class="project-icon" src="/img/icons/group_bill.png"/>
+	<a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a>
+	<button data="/img/group_bill.png" datawidth="500" dataheight="248" class="popup-trigger"/>
 </h3>
 <p>An iPhone application to split a restaurant bill fairly according to how much
 people have eaten/drink. <a href="http://itunes.apple.com/us/app/group-bill/id504949463?ls=1&mt=8" title="Group Bill on iTunes Store">Available on the iTunes App Store</a>.</p>
 
-<h3><img class="project-icon" src="/img/icons/generic_ios_icon.png"/><a title="iPhone app" href="#">iPhone application</a></h3>
-<img class="thumbnail" style="float:right;margin:5px" src="/img/twim.png" />
+<h3>
+	<img class="project-icon" src="/img/icons/generic_ios_icon.png"/>
+	<a title="iPhone app" href="#">iPhone application</a>
+	<button data="/img/twim.png" datawidth="256" dataheight="192" class="popup-trigger"/>
+</h3>
 <p>An iPhone application I've written for a client that allows the user to build a report in case of an emergency based on 
 pictures, videos, text messages and audio recordings. </p>
 <p>The report is then saved on the device and sent to remote servers
 along with the user position where it will be analyzed and dispatched to the competent authorithies.
 </p>
 <p>Not (yet) available on the iTunes store.</p>
-<!--
-<h4><a title="MDTouch" href="#">MDTouch</a></h4>
-<p>A collection of Objective-C categories and utility classes I use in my projects.<br/>
-Soon on GitHub.</p>
--->
-<h3><img class="project-icon" src="/img/icons/moviesugg.png"/><a title="Movie Suggestions" href="https://market.android.com/details?id=com.marcodinacci.android.movierec">Movie Suggestions</a></h4>
+
+<h3>
+	<img class="project-icon" src="/img/icons/moviesugg.png"/>
+	<a title="Movie Suggestions" href="https://market.android.com/details?id=com.marcodinacci.android.movierec">Movie Suggestions</a>
+	<button data="/img/ms.png" datawidth="500" dataheight="445" class="popup-trigger"/>
+</h3>
 <p>An Android application that suggests a list of movies to watch given a movie
 title. It uses the Rottentomatoes API to retrieve movies informations. Uses my
 <b>rottentomatoes-for-android</b> open source library.</p>
 
-<h3><img class="project-icon" src="/img/icons/picmotion.png"/><a title="Pic In Motion" href="https://github.com/mdinacci/PicInMotion/tree/standalone">PicInMotion</a></h3>
+<h3>
+	<img class="project-icon" src="/img/icons/m-file.png"/>
+	<a title="MDTouch" href="https://github.com/mdinacci/MDTouch">MDTouch</a>
+</h3>
+<p>A collection of Objective-C categories and utility classes I use in my projects.</p>
+
+<h3>
+	<img class="project-icon" src="/img/icons/picmotion.png"/>
+	<a title="Pic In Motion" href="https://github.com/mdinacci/PicInMotion/tree/standalone">PicInMotion</a>
+</h3>
 <p>An Android <em>proof of concept</em> application that demonstrate how to
 perform motion detection using an Android phone and its camera.
 I’ve also written an <a href="http://www.intransitione.com/blog/how-to-detect-motion-on-an-android-device">article</a> 
 to explain how the motion detection works.</p>
 
-<h3><img class="project-icon" src="/img/icons/generic_android.png"/><a title="rottentomatoes-for-android" href="https://github.com/mdinacci/rottentomatoes-for-android">rottentomatoes-for-android</a></h3>
+<h3>
+	<img class="project-icon" src="/img/icons/generic_android.png"/>
+	<a title="rottentomatoes-for-android" href="https://github.com/mdinacci/rottentomatoes-for-android">rottentomatoes-for-android</a>
+</h3>
 <p>An Open Source Java library that implements the <a href="http://developer.rottentomatoes.com/">Rotten Tomatoes API</a>.</p>
 
-<h3><img class="project-icon" src="/img/icons/ruby_logo.png"/><a title="careers-crawler" href="https://github.com/mdinacci/careers-crawler">careers-crawler</a></h3>
+<h3>
+	<img class="project-icon" src="/img/icons/ruby_logo.png"/>
+	<a title="careers-crawler" href="https://github.com/mdinacci/careers-crawler">careers-crawler</a>
+</h3>
 <p>A tool I've written while looking for a job in order to learn ruby. It scrapes the content of
 <a href="http://careers.stackoverflow.com">careers.stackoverflow.com</a> and produces a set
 of visualizations to highlight the most used technologies required by the companies
 looking for developers. I used the graphics in an article about the <a href="http://www.intransitione.com/blog/look-it-job-market/">job market</a>. 
 </p>
 
-<p>More projects available on my <a href="https://github.com/mdinacci">GitHhub</a> page.</p>
+<p>My <a href="https://github.com/mdinacci">GitHhub</a> page.</p>
+
