--- a/css/screen.css
+++ b/css/screen.css
@@ -1,8 +1,10 @@
 @import "normalize.css";
 @import "syntax.css";
+@import "mdpopup.css";
 .alert{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;}
 .align-right{margin:0;padding:0;margin-left:8px;margin-top:8px;margin-bottom:8px;float:right;}
 .align-left{margin:0;padding:0;margin-right:8px;margin-top:8px;margin-bottom:8px;float:left;}
+.align-center{margin:0;padding:0;margin-left:8px;margin-top:8px;margin-bottom:8px;float:center;}
 body>*{clear:both;margin:0 auto;width:700px;}
 body>header{border-bottom:4px solid #ddd;margin-bottom:20px;padding:0 0 20px 0;position:relative;}
 body>footer{border-top:4px solid #ddd;margin-top:20px;padding:10px 0;}
@@ -28,7 +30,7 @@ article>img{border:1px solid #CCC;opacity:.9;filter:alpha(opacity=90);}
 article>img:hover{border-color:#AAA;opacity:1.0;filter:alpha(opacity=100);}
 #like-and-subscribe{display:inline-block;float:right;margin-top:4px;}
 .simple{font:13px/18px Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace;background-color:#eee;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;padding:3px;border:solid #ccc 1px;}
-.project-icon{width:48px;height:48px;padding-right:5px;vertical-align:middle;opacity:.9;filter:alpha(opacity=90);}
+.project-icon{width:40px;height:40px;padding-right:5px;vertical-align:middle;opacity:.9;filter:alpha(opacity=90);}
 .project-icon:hover{opacity:1.0;filter:alpha(opacity=100);}
 .success{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#dff0d8;border-color:#d6e9c6;color:#468847;}
 .headsup{padding:8px 35px 8px 14px;margin-bottom:18px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;background-color:#d9edf7;border-color:#bce8f1;color:#3a87ad;}
