Minor changes to layout, almost finished the last article...

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -52,7 +52,7 @@ a:hover {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 28px;
     .text-header;
 }
 
@@ -112,7 +112,7 @@ article > header {
 article > header > h2 {
     color: #333;
     margin: 0 0 5px 0;
-    padding: 0;
+    padding: 0 0 20px 0;
 }
 article > header > h2 > a {
     color: #333 !important;
@@ -144,7 +144,7 @@ article > img:hover {
 #like-and-subscribe {
     display: inline-block;
     float: right;
-    margin-top: 4px;
+    margin-top: 0px;
 }
 
 /* Post and project lists */
