--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,9 @@
 <header>
     <nav>
         <i></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;|
-        <i></i>&nbsp;<a href="/blog.html" title="Blog">Blog</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/blog.html" title="Blog Archive">Blog Archive</a>  &nbsp;|
         <i></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;|
         <i></i>&nbsp;<a href="http://github.com/mdinacci" title="github.com/mdinacci" rel="nofollow">GitHub</a>  &nbsp;|
         <i></i>&nbsp;<a href="/support.html" title="Support" rel="nofollow">Support</a>  &nbsp;|
-        <i class="rss-icon"></i>&nbsp;<a id="subscribe-link" href="http://feeds.feedburner.com/Intransitionecom" 
-            title="Go to my RSS feed" rel="nofollow">Subscribe</a>
-        <span id="sitename">// intransitione.com</span>
     </nav>
 </header>
