--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,10 @@ comments: true
         <footer>
             <section id="sharing">
                 <span id="share-buttons-label">Share this:</span><div id="share-buttons"></div>
-                <p id="like-and-subscribe">Liked this post? Subscribe to my <a href="{{ site.feed }}" rel="nofollow">RSS feed</a>.</p>
+                <p id="like-and-subscribe">
+                    <a href="https://twitter.com/MarcoDinacci" class="twitter-follow-button" data-show-count="false">Follow @MarcoDinacci</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </p>
             </section>
 
             <section id="related">
