--- a/_less/helpers.less
+++ b/_less/helpers.less
@@ -66,7 +66,7 @@
     font-weight: bold;                                                         
     line-height: 1em;                                                          
     margin: 0;                                                                 
-    padding: 0 0 20px 0;
+    padding: 5px 0 5px 0;
 }
 
 .marginless() {
