Crazy update. Changed the index layout so projects are no longer visible but are now in a separate page. Added a blurb to all articles and added pagination. A few changes to the style too although it's still not completely working.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
         <i></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;|
-        <i></i>&nbsp;<a href="/blog.html" title="Blog Archive">Blog Archive</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/blog.html" title="Articles">Articles</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/projects.html" title="Projects">Projects</a>  &nbsp;|
         <i></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;|
-        <i></i>&nbsp;<a href="http://github.com/mdinacci" title="github.com/mdinacci" rel="nofollow">GitHub</a>  &nbsp;|
-        <i></i>&nbsp;<a href="/support.html" title="Support" rel="nofollow">Support</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/support.html" title="Support" rel="nofollow">Support/Contact</a>  &nbsp;|
     </nav>
 </header>
