--- a/_less/screen.less
+++ b/_less/screen.less
@@ -101,7 +101,12 @@ div.highlight {
     .border-radius;
 }
 
-// Articles
+// Article
+article {
+    border-bottom: 1px dashed rgba(60, 60, 60, 0.15);
+    margin-bottom: 40px
+}
+
 article > header {
     border-bottom: 1px solid #ddd;
     color: #999;
@@ -112,7 +117,6 @@ article > header {
 article > header > h2 {
     color: #333;
     margin: 0 0 5px 0;
-    padding: 0 0 20px 0;
 }
 article > header > h2 > a {
     color: #333 !important;
